Add Dial project

--- a/build_kernel/driver_Dial/Makefile
+++ b/build_kernel/driver_Dial/Makefile
@@ -1,9 +1,10 @@
-DRIVER_NAME = temp
+DRIVER_NAME = Dial_driver
 
 obj-m += $(DRIVER_NAME).o 
-$(DRIVER_NAME)-objs += main.o
+$(DRIVER_NAME)-objs += main.o Mid_DialControl.o Op_InterruptManager.o
 
-TARGET = pi@192.168.0.50:MyProject/Kernel
+
+TARGET = pi@192.168.1.50:MyProject/Kernel
 FILE_DRIVER = $(DRIVER_NAME).ko
 
 KDIR = /home/phuoc/Myproject/Kernel/linux
